--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
         "url": "https://github.com/photonstorm/phaser3-typescript-project-template/issues"
     },
     "homepage": "https://github.com/photonstorm/phaser3-typescript-project-template#readme",
-    "dependencies": {},
+    "dependencies": {
+        "3": "^2.1.0"
+    },
     "devDependencies": {
         "@rollup/plugin-replace": "^2.3.0",
-        "phaser": "^3.24.1",
+        "phaser": "^3.50.0",
         "rollup": "^1.29.0",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-node-resolve": "^5.2.0",
